--- a/fi-seminar-2022/fi-seminar-talk.tex
+++ b/fi-seminar-2022/fi-seminar-talk.tex
@@ -19,7 +19,7 @@
 \spc{\small Flatiron Institute}
 \vfill 
 \noindent 
-\spc{\footnotesize October June 2022}
+\spc{\footnotesize June 2024: U. Ljubljana}
 \hfill 
 {\footnotesize \url{https://mc-stan.org}}
 \hfill 
