--- a/gist/gist-yale-2024.tex
+++ b/gist/gist-yale-2024.tex
@@ -59,7 +59,7 @@
 \item Metropolis-Hastings \myemph{accept probability} adjusted for balance.
 \item \myemph{Warmup} (global, non-Markovian) is \myemph{not required}.
 \begin{subitemize}
-\item still \myemph{need burn in} to find bulk of probability mass
+\item still \myemph{need burn in} to find bulk of probability mass (i.e., remove transient bias)
 \end{subitemize}
 \item \myemph{Simplifies proofs} of correctness for instances
   \begin{subitemize}
@@ -84,7 +84,7 @@
   \nabla_\rho \, H(\theta, \rho) &= -\nabla_{\theta} \, \log
   p(\theta \mid y)
   \end{align*}
-  \item \myemph{Joint density}: $\log p(\theta, \rho) = \log p(\theta \mid y) + \log \textrm{normal}(\rho \mid 0, 1) = -H(\theta, \rho)$
+  \item \myemph{Joint log density}: $\log p(\theta, \rho) = \log p(\theta \mid y) + \log \textrm{normal}(\rho \mid 0, 1) = -H(\theta, \rho)$
 \end{itemize}
 
 \sld{Leapfrog algorithm: $\Phi_{\epsilon, M}$}
@@ -111,11 +111,11 @@
   \begin{subitemize}
   \item {position} $\theta$
   \item {step size} $\epsilon > 0,$
-  \item {number of steps} $T \in \mathbb{N}$
+  \item {number of steps} $N \in \mathbb{N}$
   \item {mass matrix} $M$ (symmetric positive definite)
   \end{subitemize}
 \item \myemph{Refresh momentum}: Gibbs sample $\rho \sim \textrm{normal}(0, M)$
-\item \myemph{Simulate dynamics}:  Let $\theta^*, \rho^* = \Phi_{\epsilon,M}^T(\theta, \rho)$
+\item \myemph{Simulate dynamics}:  Let $\theta^*, \rho^* = \Phi_{\epsilon,M}^N(\theta, \rho)$
 \item \myemph{Metropolize}: Return $\theta^*$ if $\textrm{uniform}(0, 1) <
   \dfrac{p(\theta^*, \rho^*)}
        {p(\theta, \rho)}$ else return $\theta$
@@ -135,9 +135,9 @@
 
 \sld{Gibbs self tuning (GIST)}
 \begin{itemize}
-\item \myemph{Couple tuning} parameters $\alpha$ (step
+\item \myemph{Couple tuning parameters} $\alpha$ (step
   size, number of steps, mass matrix)
-\item \myemph{Free choice} of conditional tuning-parameter distribution $p(\alpha \mid \theta, \rho)$
+\item \myemph{Free choice} of conditional \myemph{tuning-parameter distribution} $p(\alpha \mid \theta, \rho)$
 \item Each iteration, \myemph{Gibbs sample} $\alpha^* \sim p( \cdot \mid \theta,
   \rho)$
 \item \myemph{Propose} $\theta^*, \rho^* = \Phi^{T^*}_{\epsilon^*,
@@ -145,6 +145,10 @@
   M^*, T^*$
 \item Metropolis-Hastings \myemph{accept probability}:
   $$
+  1 \wedge
+  \dfrac{p(\theta^*, \rho^*, \alpha^*)}
+  {p(\theta, \rho, \alpha^*)}
+  \quad = \quad
   1 \wedge
   \dfrac{p(\theta^*, \rho^*)}
   {p(\theta, \rho)}
@@ -160,9 +164,9 @@
 \item HMC works with \myemph{randomized tuning} (e.g., steps $L$ or
   step size $\epsilon$)
 \item Other tuning parameters are fixed (i.e., delta function distributions)
-\item \myemph{Randomizing} step size or number of steps \myemph{removes
-    harmonics} that plague HMC with fixed step size and steps, e.g.,
+\item For example, \myemph{randomizing step size},
   $$p(L \mid \theta, \rho) = \textrm{uniform}(L \mid 1, N).$$
+\myemph{removes harmonics} that plague HMC with fixed step size and steps.
 \item If tuning parameter distribution does \myemph{not depend on position or
   momentum}, then $p(\alpha^* \mid \theta, \rho) = p(\alpha^* \mid \theta^*,
   \rho^*)$, and thus
@@ -173,7 +177,7 @@
   \cdot
   \dfrac{p(\alpha^* \mid \theta^*, \rho^*)}
        {p(\alpha^* \mid \theta, \rho)}
-       =
+      \quad = \quad
        1 \wedge
        \dfrac{p(\theta^*, \rho^*)}{p(\theta, \rho)}
   $$       
@@ -210,13 +214,13 @@
   as set from $n$ to 0, hence
 \begin{align*}
   p(n \mid \pos{\theta}{0}, \pos{\rho}{0})
-  &= \sum_{i=0}^{L-n}
+  &= \frac{1}{L} \sum_{i=0}^{L-n}
       \dfrac{p(\pos{\theta}{n},\, \pos{\rho}{n})}
             {\sum_{j=i}^{i + L} p(\theta(j),\, \rho(j))}
   &= p(\pos{\theta}{n},\, \pos{\rho}{n}) / Z
   \\[4pt]
   p(n \mid \theta(n),\, -\rho(n))
-  &= \sum_{i=0}^{L-n} \dfrac{p(\pos{\theta}{0},\, \pos{\rho}{0})}
+  &= \frac{1}{L} \sum_{i=0}^{L-n} \dfrac{p(\pos{\theta}{0},\, \pos{\rho}{0})}
                            {\sum_{j=i}^{i + L} p(\theta(j),\, \rho(j))}
   & = p(\pos{\theta}{0},\, \pos{\rho}{0}) / Z
 \end{align*}
@@ -251,7 +255,7 @@ $\dfrac{p(\pos{\theta}{0},\, \pos{\rho}{0})}
 \item Original and revised \myemph{no-U-turn sampler} (NUTS) are GIST samplers.
 \item The \myemph{apogee-to-apogee path
     sampler} (AAPS) is a GIST sampler.
-\item Cast as conditional \myemph{distributions on number of steps} given
+\item Each provides conditional \myemph{distributions on number of steps} given
   current position and momentum with a \myemph{multinomial acceptance}.
 \item The \myemph{autoMALA sampler} is a GIST sampler for step size. 
 \vfill
@@ -313,11 +317,11 @@ $\dfrac{p(\pos{\theta}{0},\, \pos{\rho}{0})}
   \begin{subitemize}
   \item Evolve Hamiltonian randomly \myemph{forward and backward} in time $L$ steps.
   \item Select proposal \myemph{propto joint density}
-  \item GIST \myemph{acceptance 100\%} if \myemph{adapted step sizes compatible}.
+  \item GIST \myemph{accept} if \myemph{adapted step sizes compatible}.
   \end{subitemize}
 \item (2) Replace multinomial with \myemph{multinomial NUTS}. \begin{subitemize}
   \item Just like (1), but challenging to write down on slide (and paper).
-  \item GIST \myemph{acceptance still 100\%} if adapted step sizes compatible.
+  \item GIST \myemph{accept} if adapted step sizes compatible.
   \item See \myemph{second GIST paper} on {\slshape arXiv} (ref at end).
 \end{subitemize}
 \end{itemize}
@@ -359,28 +363,48 @@ $\dfrac{p(\pos{\theta}{0},\, \pos{\rho}{0})}
   \item if that's stable and not max step size, evauate \myemph{quadruple} selected step size
   \end{subitemize}
 \item Randomization scheme bounds work to \myemph{triple} work done by NUTS.
-\item Reverse evaluations can be \myemph{parallelized}.
+  \begin{subitemize}
+  \item both can \myemph{fail fast} at divergence to reduce cost
+  \item reverse evaluations can be \myemph{parallelized}.
+      \end{subitemize}
 \item \myemph{Extra work only} if NUTS \myemph{diverges on Hamiltonian} beyond threshold $\tau$.
   \begin{subitemize}
   \item Needs \myemph{empirical evaluation} vs.\ NUTS step size adaptation target.
   \end{subitemize}
 \end{itemize}
 
-\sld{NUTS with per leapfrog stepsize adaptation}
+\sld{NUTS with {\slshape per leapfrog} step size adaptation}
 \begin{itemize}
 \item Step size adaptive NUTS is \myemph{suboptimal} in that it
   \begin{subitemize}
-  \item uses \myemph{one step size} for \myemph{entire trajectory}
-  \item but \myemph{trajectories vary} in \myemph{scale/curvature} (e.g., flat mouth, curved neck)
+  \item uses \myemph{single step size} for \myemph{entire trajectory} (i.e., each leapfrog step)
+  \item but \myemph{trajectories vary} in \myemph{scale/curvature} (e.g., funnel's flat mouth, curved neck)
   \end{subitemize}
 \item Fix is to \myemph{adapt} step size \myemph{each leapfrog} step.
   \begin{subitemize}
-  \item with \myemph{no stepsize randomization}
+  \item with \myemph{no step size randomization} (bounds ``extra'' work)
   \item \myemph{acceptance} involves product of accepting all steps
   \end{subitemize}
-\item Restricts \myemph{extra work} (reduced stepsize) to \myemph{where it's needed}
-\item \myemph{Works well} on examples we've tried, even w/o stepsize randomization.
+\item Restricts \myemph{extra work} (reduced step size) to \myemph{where it's needed}
+\item \myemph{Works well} on examples we've tried, even w/o step size randomization.
 \item GIST 3 \myemph{paper in the works}.
+\end{itemize}
+
+\sld{Adapting the mass matrix}
+\begin{itemize}
+\item \myemph{Proof of concept}:  for \myemph{log concave} densities,
+  $$p(M^{-1} \mid \theta, \rho) = \textrm{Wishart}(M^{-1} \mid \nu, c \cdot \nabla^2 -\log p(\theta))$$
+  \begin{subitemize}
+    \vspace*{-12pt}
+  \item tune $c, \nu$; exact for multivariate normal; $\mathcal{O}(D^3)$ in dimension
+  \end{subitemize}
+\item Girolami and Calderhead \myemph{Riemannian HMC}: analytical \myemph{Fisher information}
+\item \myemph{Betancourt}'s \myemph{softabs} for RHMC: eigendecompose, condition negative eigenvalues, reconstruct;  $\mathcal{O}(D^3)$
+\item In \myemph{general case}, need to get \myemph{positive definite} mass matrix
+  \begin{subitemize}
+  \item \myemph{Sifan Liu} is working on \myemph{low rank} version via \myemph{Lanczos}
+  \item  \myemph{Chirag Modi} (in attendance) using \myemph{low rank} via \myemph{L-BFGS}
+  \end{subitemize}
 \end{itemize}
 
 \sld{Delayed rejection HMC for step size adaptation}
@@ -390,10 +414,10 @@ $\dfrac{p(\pos{\theta}{0},\, \pos{\rho}{0})}
   \item if proposal \myemph{rejected}, try again with \myemph{smaller step size}
   \item use ``ghost states'' in reverse for Metropolis-Hastings adjustment
   \end{subitemize}
-\item \myemph{Improves delayed rejection} by only retrying if probabilty of \myemph{acceptance is low} (additional balance).
+\item \myemph{Novel improvement to delayed rejection}: only retrying if probabilty of \myemph{acceptance is low} (requires inexpensive additional balance).
 \item \myemph{Works} for funnel.
 \item We haven't tried \myemph{DR-NUTS}.
-\item {\small Chirag Modi, Alex Barnett, Bob Carpenter. 2024. \myemph{Delayed rejection Hamiltonian Monte Carlo for sampling multiscale distributions}. \textit{Bayesian Analysis} 19(3). {\small arXiv-ed 2021}.}
+\item {\small \myemph{Chirag Modi}, Alex Barnett, Bob Carpenter. 2024. \myemph{Delayed rejection Hamiltonian Monte Carlo for sampling multiscale distributions}. \textit{Bayesian Analysis} 19(3). {\small arXiv-ed 2021}.}
 \end{itemize}
 
 \sld{Delayed rejection {\slshape generalized} HMC}
@@ -409,7 +433,7 @@ $\dfrac{p(\pos{\theta}{0},\, \pos{\rho}{0})}
     \item momentum refresh rate, max step size
     \end{subitemize}
 \item Chirag Modi is \myemph{combining with GIST} (see poster!)
-\item {\small Gilad Turok, Chirag Modi, Bob Carpenter. 2024. \myemph{Sampling from multiscale densities with delayed rejection generalized HMC}. \textit{arXiv}:2406.02741}
+\item {\small \myemph{Gilad Turok}, Chirag Modi, Bob Carpenter. 2024. \myemph{Sampling from multiscale densities with delayed rejection generalized HMC}. \textit{arXiv}:2406.02741}
 \end{itemize}
 
 \sld{Papers and reproducible code}
