--- a/probprog2021/carpenter-fwam2024.tex
+++ b/probprog2021/carpenter-fwam2024.tex
@@ -83,7 +83,7 @@
 \includegraphics[height=0.85\textheight]{img/workflow-fig.pdf}
 \\[-2pt]
 \spc {\footnotesize Gelman et al. 2020.  Bayesian
-        worflow. \textit{arXiv}.} \hfill \mbox{ }
+        workflow. \textit{arXiv}.} \hfill \mbox{ }
 \end{center}
 
 
