RC for Stan talk 2025

--- a/stan-overview/stan-overview.tex
+++ b/stan-overview/stan-overview.tex
@@ -6,10 +6,10 @@
 \sf%
 \vspace*{-12pt}
 %
-\noindent
+\noindent 
 \spc{\LARGE\bfseries \color{MidnightBlue}{Stan Overview}}
 \\[4pt]
-\noindent
+\noindent 
 \spc{\slshape Stan Development Team {\small (in order of joining)}:}
 \\[2pt]
 \spc{\footnotesize
@@ -331,7 +331,8 @@ y_j \sim \mathsf{Binomial}(N, \mathrm{logit}^{-1}(\beta_j))
 \sld{Funnel + Data in the Wild}
 %
 \\ \spc
-\includegraphics[width=0.8\textwidth]{img/funnel-fit-data.png}
+% \includegraphics[width=0.8\textwidth]{img/funnel-fit-data.png}
+\includegraphics[width=0.8\textwidth]{img/funnel-fit.png}
 
 
 \mypart{}{Mixture Models}
@@ -4888,16 +4889,37 @@ astrophysics, particle physics, molecular biology, oceanography, climatology, bi
 \sld{Books about Stan \hfill \large (1/2)}
 %
 \begin{itemize}
-\item Gelman and Hill (2018) {\slshape Regression and Other Stories}. Cambridge.
+\item Gelman and Vehtari (2025) {\slshape Active
+    Statistics}. Cambridge.
+\item Marc K\'ery and Kenneth F. Kellner (2024)
+{\slshape Applied Statistical Modelling for Ecologists: A Practical
+  Guide to Bayesian and Likelihood Inference Using R, JAGS, NIMBLE,
+  Stan and TMB.} Elsevier.
+\item Suzuki, J. (2023) {\slshape WAIC and WBIC with R Stan: 100
+    Exercises for Building Logic}. Springer.
+\item Song S. Qian, Mark R. DuFour and Ibrahim Alameddine. (2022)
+  {\slshape Bayesian Applications in Environmental and Ecological
+    Studies with R and Stan}. CRC.
+\item Matsuura, K. (2022) {\slshape Bayesian Statistical Modeling with Stan, R, and Python}. Springer.
+\item Johnson, A.A., M. Q. Ott, M. Dogucu. 2021. {\slshape Bayes
+    Rules! An Introduction to Applied Bayesian Modeling.} CRC Press.
+\item McElreath (2020) {\slshape Statistical Rethinking: A Bayesian course 
+    with R and Stan}. CRC. Second Edition.
+\item Gelman and Hill (2020) {\slshape Regression and Other Stories}. Cambridge.
+\item Holmes, E. E., M. D. Scheuerell, and E. J. Ward. 2019. {\slshape
+    Applied Time Series Analysis for Fisheries and Environmental
+    Sciences}. NOAA Fisheries, Northwest Fisheries Science Center.
+\item Lambert, Ben.  (2018) {\slshape A Student's Guide to Bayesian
+    Statistics}. 
 \item Hilbe, de Souza, and Ishida (2017) {\slshape Bayesian Models for Astrophysical Data Using R, JAGS, Python, and Stan}. Cambridge.
-\item Matsuura (2016) {\slshape Bayesian Statistical Modeling Using Stan and R}. Kyoritsu. (Japanese)
-\item McElreath (2016) {\slshape Statistical Rethinking: A Bayesian course
-    with R and Stan}. CRC.
 \end{itemize}
 
 \sld{Books about Stan \hfill \large (2/2)}
 %
 \begin{itemize}
+\item Matsuura (2016) {\slshape Bayesian Statistical Modeling Using Stan and R}. Kyoritsu. (Japanese) 
+\item McElreath (2016) {\slshape Statistical Rethinking: A Bayesian course 
+    with R and Stan}. CRC. First Edition.
 \item Faraway (2016) {\slshape Extending the Linear Model with R: Generalized Linear, Mixed Effects and Nonparametric Regression Models}, 2nd Edition. CRC.
 \item Korner-Nievergelt et al. (2015) {\slshape Bayesian Data Analysis in
     Ecology Using Linear Models with R, BUGS, and Stan}. Academic Press.
@@ -5697,7 +5719,7 @@ y ~ normal(mu_y, sigma);
 %
 \begin{center}
 \hspace*{12pt}
-\includegraphics[width=0.9\textwidth]{img/adaptation-windows.pdf}
+% \includegraphics[width=0.9\textwidth]{img/adaptation-windows.pdf}
 \end{center}
 \vspace*{-12pt}
 \begin{subitemize}
